--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,4 @@
 sonar.sources=src/main
 sonar.tests=src/test
 sonar.language=kotlin
-
-sonar.javascript.jstestdriver.reportsPath=target/surefire-reports
+sonar.java.binaries=target/classes
